Update and rename dashboard.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a
               title="Anichin - Fansub Donghua Subtitle Indonesia"
               itemprop="url"
-              href="dashboard.html"
+              href="index.html"
               ><img
                 itemprop="image"
                 width="270"
@@ -76,7 +76,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="dashboard.html"
+                  href="index.html"
                   >Home</a
                 >
               </li>
