--- a/ongoing.html
+++ b/ongoing.html
@@ -96,7 +96,7 @@
                     <a class="dropdown-item" href="ongoing.html">On Going</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="complite.htm">Complited</a>
+                    <a class="dropdown-item" href="complite.html">Complited</a>
                   </li>
                 </ul>
               </li>
